[package]
name = "spectrum-deploy-lm-pool"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
ergo-lib = { version = "0.24", features = ["json"] }
ergo-chain-sync = { version = "1.0", path = "../ergo-chain-sync" }
ergo-mempool-sync = { version = "1.0", path = "../ergo-mempool-sync" }
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9"
spectrum-offchain = { version = "1.0", path = "../spectrum-offchain" }
spectrum-offchain-lm = { version = "1.0", path = "../spectrum-offchain-lm" }
tokio = { version = "1.22.0", features = ["full"] }
thiserror = "1"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
sigma-test-util = { git = "https://github.com/ergoplatform/sigma-rust", rev = "799107269fa43549b08f6ddb04ed412daec1c5d7" }