[package]
name = "spectrum-offchain"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.7.2", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
ergo-chain-sync = {  version = "0.1.0", path = "../ergo-chain-sync" }
log = "0.4.17"
log4rs = "1.2.0"