[package]
name = "spectrum-offchain"
version = "1.0.0"
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.7.2", features = ["json"] }
futures = "0.3.25"
tokio = { version = "1.22.0", features = ["full"] }
ergo-chain-sync = {  version = "1.0", path = "../ergo-chain-sync" }
ergo-mempool-sync = {  version = "1.0", path = "../ergo-mempool-sync" }
#ergo-lib = { version = "0.23", features = ["json"] }
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust", rev = "799107269fa43549b08f6ddb04ed412daec1c5d7", features = ["json"] }
log = "0.4.17"
log4rs = "1.2.0"
async-trait = "0.1.58"
type-equalities = "0.3.1"
tailcall = "0.1.6"
parallel-stream = "2.1.3"
chrono = "0.4.23"
serde = { version = "1.0.147", features = ["derive"] }
priority-queue = "1.3.0"
bounded-integer = { version = "0.5.3", features = ["serde1"] }
rand = "0.8.5"
parking_lot = "0.12.1"
derive_more = "0.99.17"
bincode = "1.3"
rocksdb = "0.20.1"
serde_json = "1.0.88"
serde_with = { version = "2.1", features = ["chrono_0_4"] }
futures-timer = "3.0.2"
async-std = "1.12"
nonempty = "0.8.1"

[dev-dependencies]
sigma-test-util = { git = "https://github.com/ergoplatform/sigma-rust", rev = "799107269fa43549b08f6ddb04ed412daec1c5d7" }
rocksdb = "0.20.1"